feat(backend): complete JWT authentication overhaul and modular backend expansion
- Replaced legacy JWTAuthFilter and JWTUtils with JwtAuthenticationFilter and JwtUtil
- Added robust AuthController endpoints (register, login, refresh, me)
- Implemented role-based access control using UserRole enum and UserDetails
- Enhanced CORS, SecurityConfig, and password encryption setup
- Added new configuration classes (CorsConfig, JacksonConfig, PasswordConfig, StartupConfig, WebSocketConfig)
- Introduced KYC, Payments, Notifications, Ratings, PromoCodes, and Delivery tracking modules
- Added new service layers, DTOs, repositories, and exception handling framework
- Updated pom.xml dependencies and application properties
- Added initial SQL setup files (schema.sql, data.sql, V1__initial_schema_h2.sql, V2__sample_data.sql)
- Improved code organization and documentation for scalability and maintainability